syntax = "proto3";

package reference;

message EnumA {

}

message TestMessage {
    <caret>EnumA enumA = 1;
}