syntax = "proto3";

message ImportedMessage {

}
