syntax = "proto3";

message MessageA {

}

message TestMessage {
    Message<caret>A messageA = 1;
}